fixed non centering of elements on mobile and smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,6 @@
 
 body {
   display: flex;
-  place-content: center;
   place-items: flex-start center;
   background: var(--background);
 }
